--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,72 +2,46 @@
 # Click the repo and update to latest tags.
 # If things break on update, raise an issue
 repos:
-  <<requires::isort
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
       - id: isort
-        name: isort imports <<package-name>>
-        files: <<package-name>>
+        name: isort imports ALP
+        files: ALP
 
-      <<requires::testing
       - id: isort
         name: isort imports tests
         files: tests
-      endrequires::testing>>
-  endrequires::isort>>
 
-  <<requires::black
   - repo: https://github.com/ambv/black
     rev: 22.1.0
     hooks:
       - id: black
-        name: black formatter <<package-name>>
-        files: <<package-name>>
+        name: black formatter ALP
+        files: ALP
 
-      <<requires::testing
       - id: black
         name: black formatter tests
         files: tests
-      endrequires::testing>>
 
-      <<requires::docs
       - id: black
         name: black formatter examples
         files: examples
-      endrequires::docs>>
-  endrequires::black>>
 
-  <<requires::pydocstyle
   - repo: https://github.com/pycqa/pydocstyle
     rev: 6.1.1
     hooks:
       - id: pydocstyle
-        files: <<package-name>>
+        files: ALP
         additional_dependencies: ["toml"] # Needed to parse pyproject.toml
-  endrequires::pydocstyle>>
 
-  <<requires::mypy
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.930
-    hooks:
-      - id: mypy
-        name: mypy <<package-name>>
-        files: <<package-name>>
-  endrequires::mypy>>
-
-  <<requires::flake8
   - repo: https://github.com/pycqa/flake8
     rev: 4.0.1
     hooks:
       - id: flake8
-        name: flake8 <<package-name>>
-        files: <<package-name>>
+        name: flake8 ALP
+        files: ALP
 
-      <<requires::testing
       - id: flake8
         name: flake8 tests
         files: tests
-      endrequires::testing>>
-
-  endrequires::flake8>>
