--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,9 +4,6 @@
 # https://packaging.python.org/en/latest/guides/using-manifest-in/
 
 # Include individual files
-<<requires::license include LICENSE.txt endrequires::license>>
 include requirements.txt
-<<requires::mypy include <<package-name>>/py.typed  # This file is to export types endrequires::mypy>>
-
-<<requires::testing prune tests endrequires::testing>>
-<<requires::docs prune examples endrequires::docs>>
+prune tests
+prune examples
