--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -34,3 +34,5 @@ jobs:
       uses: coverallsapp/github-action@v2
       with:
         path-to-lcov: coverage.xml
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
