--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ omit = [
     "transformer.py",
     "transformer_prediction_interface.py",
     "transformer_prediction_interface_ens.py",
-    "tab_model.py"
+    "TorchUtil.py",
+    "tab_model.py",
+    "plot_functions.py"
 ]
 
 [tool.coverage.report]
@@ -24,6 +26,7 @@ exclude_lines = [
     '\.\.\.',
     "raise NotImplementedError",
     "if TYPE_CHECKING",
+    "pass"
 ] # These are lines to exclude from coverage
 
 [tool.black]
