--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==22.1.0
 aiosqlite==0.20.0
 alabaster==0.7.16
+ALP==0.0.1
 antlr4-python3-runtime==4.9.3
 anyio==4.4.0
 apeye==1.4.1
@@ -47,6 +48,7 @@ graphviz==0.20.3
 html5lib==1.1
 idna==3.7
 imagesize==1.4.1
+iniconfig==2.0.0
 ipykernel==6.29.4
 ipython==8.25.0
 ipython-genutils==0.2.0
@@ -120,6 +122,7 @@ pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
 plotly==5.22.0
+pluggy==1.5.0
 plumbum==1.8.3
 ply==3.11
 prometheus_client==0.20.0
@@ -137,6 +140,7 @@ PyMySQL==1.1.1
 PyNaCl==1.5.0
 pynvml==11.5.0
 pyparsing==3.1.2
+pytest==8.2.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytorch-tabnet==4.1.0
